[tool.poetry]
name = "alexs-id-server"
version = "0.1.0"
description = "An attempt to understand OAUTH 2.0"
authors = ["Alex Wilson <alex.adwilson@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "alexs_id_server"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
